# chat

./: Cargo.toml  cliff.toml  deny.toml  test.rest
chat_server/: Cargo.toml
chat_server/src/: config.rs  lib.rs
notify_server/: Cargo.toml  index.html
notify_server/src/: lib.rs  main.rs  sse.rs
src/handlers/: chat.rs
